para asugar que hace la subida final

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <div class="location">
             <p>10.2.2010 Toronto<br>The Drake Hotel</p>
           </div>
-          <button type="button">Tour dates</button>
+          <button type="button">Tour date</button>
         </main>
         </section>
       <div class="item-3">
