subida que empieza a tener forma

--- a/src/index.html
+++ b/src/index.html
@@ -20,21 +20,18 @@
       <div class="item-2">
       <section class="poster">
         <main>
-          <h1>Tycho</h1>
-          <h2>Artist Spotlight</h2>
-          <hr>
-          <p class="about">Tycho is an American ambient music project led by Scott Hansen as primary composer, songwriter and producer. Hailing from San Francisco, California, he is known as ISO50 for his photographic and design works. His music is a combination of downtempo
-            vintage-style synthesizers and ambient melodies.</p>
-          <a href="javascript:void(0)">Read more</a>
-          <img src="assets/images/people-in-festival-750.jpg" alt="Tycho Live at Toronto">
+          <h1>Festival de Chiclana</h1>
+          <h2>El mejor festival del sur</h2>
+          <p class="about">Tenemos el placer de anunciar que en Chiclana de la frontera se celebrará el mejor festival del sur de España. Acudirán los mejores artistas nacionales e internacionales para poner a Chiclana en el punto de mira de todos los festivales.</p>
+          <img src="assets/images/people-in-festival-750.jpg" alt="Personals bailando en un festival">
           <div class="location">
-            <p>10.2.2010 Toronto<br>The Drake Hotel</p>
+            <p>Verano del 2021<br>Chiclana de la Frontera</p>
           </div>
-          <button type="button">Tour date</button>
+          <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
         </main>
         </section>
       <div class="item-3">
-        <button type="button" class="btn btn-primary">Primary</button>
+
       </div>
       <div class="item-4">4</div>
     </section>
