--- a/src/index.html
+++ b/src/index.html
@@ -11,27 +11,49 @@
     <section class="grid-1">
       <div class="item-1">
         <section class="menu-superior">
-          <div class="menu-superior-1">Logo</div>
-          <div class="menu-superior-2">Enlace pagina 2</div>
-          <div class="menu-superior-3">Enlace pagina 3</div>
-          <div class="menu-superior-4">Enlace pagina 4</div>
+          <div class="menu-superior-1">
+            <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+          </div>
+          <div class="menu-superior-2">
+            <a href="#">Bandas</a>
+          </div>
+          <div class="menu-superior-3">
+            <a href="#">Blog</a>
+          </div>
+          <div class="menu-superior-4">
+            <a href="#">Blog 2</a>
+          </div>
         </section>
       </div>
       <div class="item-2">
         <section class="poster">
-          <main>
-            <h1>Festival de Chiclana</h1>
-            <h2>El mejor festival del sur</h2>
-            <p class="about">Tenemos el placer de anunciar que en Chiclana de la frontera se celebrará el mejor festival del sur de España. Acudirán los mejores artistas nacionales e internacionales para poner a Chiclana en el punto de mira de todos los festivales.</p>
-            <img src="assets/images/people-in-festival-750.jpg" alt="Personals bailando en un festival">
+          <div class="poster-grid">
+            <h1 class="poster-titulo">Festival de Chiclana</h1>
+            <h2 class="poster-subtitulo">El mejor festival del sur</h2>
+            <p class="texto">Tenemos el placer de anunciar que en Chiclana de la frontera se celebrará el mejor festival del sur de España. Acudirán los mejores artistas nacionales e internacionales para poner a Chiclana en el punto de mira de todos los festivales.</p>
+            <img src="assets/images/festival-azul-750.jpg" alt="Personas bailando en un festival">
             <div class="location">
               <p>Verano del 2021<br>Chiclana de la Frontera</p>
             </div>
             <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
-          </main>
+          </div>
         </section>
       <div class="item-3">
-
+        <section class="footer">
+          <div class="footera">
+            <a href="#">INFORMACIÓN Y RESERVAS</a>
+          </div>
+          <div class="footerb">
+           <a href="#">555 555 555 | reservas@festivalchiclana.es</a>
+          </div>
+          <div class="footerc">
+            <a href="#">AVISO LEGAL</a>
+          </div>
+          <div class="footerd">
+            <a href="#">Política de privacidad</a>
+             | <a href="#">Política de cookies</a>
+          </div>
+        </section>
       </div>
       <div class="item-4">4</div>
     </section>
