color fondo menu inferior

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
             <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
           </div>
         </section>
+      </div>
       <div class="item-3">
         <section class="footer">
           <div class="footera">
@@ -55,7 +56,10 @@
           </div>
         </section>
       </div>
-      <div class="item-4">4</div>
+      <div class="item-4">
+
+
+      </div>
     </section>
     <span class="nope">🚫 &nbsp; Sorry, but CSS Grid is unsupported in your browser.</span>
     <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
