index listo a falta de nombre enlace blog2

--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,28 @@
         </section>
       </div>
       <div class="item-4">
-
-
+        <section class="menu-inferior">
+          <div class="menuInfa">
+              <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+          </div>
+          <div class="menuInfb">
+            <a href="#">Home</a>
+          </div>
+          <div class="menuInfc">
+            <a href="#">Bandas</a>
+          </div>
+          <div class="menuInfd">
+            <a href="#">Blog</a>
+          </div>
+          <div class="menuInfe">
+            <a href="#">Blog 2</a>
+          </div>
+          <div class="menuInff">
+            <i class="fab fa-google-plus-g"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+      </section>
       </div>
     </section>
     <span class="nope">🚫 &nbsp; Sorry, but CSS Grid is unsupported in your browser.</span>
