--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,8 @@
           </div>
         </section>
       </div>
-      <div class="item-4  border border-secondary border-right-0 border-bottom-0  border-left-0">
+      <div class="item-4  border border-secondary border-right-0 border-bottom-0  border-left-0
+      ">
         <section class="menu-inferior">
           <div class="menuInfa">
               <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
