--- a/src/index.html
+++ b/src/index.html
@@ -59,22 +59,22 @@
       <div class="item-4  border border-secondary border-right-0 border-bottom-0  border-left-0
       ">
         <section class="menu-inferior">
-          <div class="menuInfa">
+          <div class="menu-inferior-1">
               <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
           </div>
-          <div class="menuInfb">
+          <div class="menu-inferior-2">
             <a href="#">Home</a>
           </div>
-          <div class="menuInfc">
+          <div class="menu-inferior-3">
             <a href="#">Bandas</a>
           </div>
-          <div class="menuInfd">
+          <div class="menu-inferior-4">
             <a href="#">Blog</a>
           </div>
-          <div class="menuInfe">
+          <div class="menu-inferior-5">
             <a href="#">Blog 2</a>
           </div>
-          <div class="menuInff">
+          <div class="menu-inferior-6">
             <i class="fab fa-google-plus-g"></i>
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
