primera version de bands hay que tunear y adaptar tamaños imagenes y css

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
           </div>
           <div class="menu-superior-2">
-            <a href="#">Bandas</a>
+            <a href="bands.html">Bandas</a>
           </div>
           <div class="menu-superior-3">
             <a href="#">Blog</a>
