mejoras en fotografias

--- a/src/bands.html
+++ b/src/bands.html
@@ -36,57 +36,57 @@
                       <img src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>The Banana Bird</h2>
-                      <p>This banana looks a lot like a bird, doesn't it? When originally posted there was some debate whether it was a hummingbird, a seagull, or a crow. I stand by my earlier statement that it is a banana.</p>
-            <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
+                      <h2>Rozzalen</h2>
+                      <p>Una de las mayores exponentes actuales en el mercado nacional</p>
+            <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
                   <a href="#">
                     <figure class="thumbnail">
-                      <img src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="A banana that looks like a bird">
+                      <img src="assets/images/the-drummer-plays-the-drums.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>The Banana Bird</h2>
-                      <p>This banana looks a lot like a bird, doesn't it? When originally posted there was some debate whether it was a hummingbird, a seagull, or a crow. I stand by my earlier statement that it is a banana.</p>
-            <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
+                      <h2>El Kanka</h2>
+                      <p>Con su estilo fresco no te dejará indiferente.</p>
+            <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
                   <a href="#">
                     <figure class="thumbnail">
-                      <img src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="A banana that looks like a bird">
+                      <img src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>The Banana Bird</h2>
-                      <p>This banana looks a lot like a bird, doesn't it? When originally posted there was some debate whether it was a hummingbird, a seagull, or a crow. I stand by my earlier statement that it is a banana.</p>
-            <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
+                      <h2>Izal</h2>
+                      <p>Rock actual que destaca por la voz de su cantante principal.</p>
+            <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
                   <a href="#">
                     <figure class="thumbnail">
-                      <img src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="A banana that looks like a bird">
+                      <img src="assets/images/people-in-festival-750.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>The Banana Bird</h2>
-                      <p>This banana looks a lot like a bird, doesn't it? When originally posted there was some debate whether it was a hummingbird, a seagull, or a crow. I stand by my earlier statement that it is a banana.</p>
-            <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
+                      <h2>Antilopez</h2>
+                      <p>Mezcla de muchos estilos incluidos el cavaret que conseguiran sorpender a los asistentes.</p>
+            <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
                   <a href="#">
-                    <figure class="thumbnail">
+                    <figure class= "thumbnail">
                       <img src="assets/images/music-band-in-the-studio-with-many-instruments.jpg" alt="Norwegian boller">
                     </figure>
                     <div class="card-content">
-                      <h2>Norwegian Boller</h2>
-                      <p>This banana looks a lot like a bird, doesn't it? When originally posted there was some debate whether it was a hummingbird, a seagull, or a crow. I stand by my earlier statement that it is a banana.</p>
-            <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
+                      <h2>Queen</h2>
+                      <p>Tributo a la mítica banda tocando todos sus grandes éxistos.</p>
+            <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
@@ -96,9 +96,9 @@
                       <img src="assets/images/band-in-the-studio-with-many-instruments.jpg" alt="A dinosaur wearing an aluminium jacket">
                     </figure>
                     <div class="card-content">
-                      <h2>A Dinosaur</h2>
-                      <p>This banana looks a lot like a bird, doesn't it? When originally posted there was some debate whether it was a hummingbird, a seagull, or a crow. I stand by my earlier statement that it is a banana.</p>
-            <button type="button" class="btn btn-primary">Enseñame las fechas!</button>
+                      <h2>Andres Calamaro</h2>
+                      <p>Artista internacional que trae a nuestra tierra todos sus grandes éxitos.</p>
+            <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
