--- a/src/bands.html
+++ b/src/bands.html
@@ -31,79 +31,79 @@
             <div class="centered">
               <section class="cards">
                 <article class="card">
-                  <a href="#">
+                  <a href="#" class="enlace">
                     <figure class="thumbnail">
                       <img src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>Rozzalen</h2>
-                      <p>Una de las mayores exponentes actuales en el mercado nacional</p>
-            <button type="button" class="btn btn-primary">Comprar entradas!</button>
+                      <h2 class="card-titulo">Rozzalen</h2>
+                      <p class="card-texto">Una de las mayores exponentes actuales en el mercado nacional</p>
+                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
-                  <a href="#">
+                  <a href="#" class="enlace">
                     <figure class="thumbnail">
                       <img src="assets/images/the-drummer-plays-the-drums.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>El Kanka</h2>
-                      <p>Con su estilo fresco no te dejará indiferente.</p>
-            <button type="button" class="btn btn-primary">Comprar entradas!</button>
+                      <h2 class="card-titulo">El Kanka</h2>
+                      <p class="card-texto">Con su estilo fresco no te dejará indiferente.</p>
+                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
-                  <a href="#">
+                  <a href="#" class="enlace">
                     <figure class="thumbnail">
                       <img src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>Izal</h2>
-                      <p>Rock actual que destaca por la voz de su cantante principal.</p>
-            <button type="button" class="btn btn-primary">Comprar entradas!</button>
+                      <h2 class="card-titulo">Izal</h2>
+                      <p class="card-texto">Rock actual que destaca por la voz de su cantante principal.</p>
+                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
-                  <a href="#">
+                  <a href="#" class="enlace">
                     <figure class="thumbnail">
                       <img src="assets/images/people-in-festival-750.jpg" alt="A banana that looks like a bird">
                     </figure>
                     <div class="card-content">
-                      <h2>Antilopez</h2>
-                      <p>Mezcla de muchos estilos incluidos el cavaret que conseguiran sorpender a los asistentes.</p>
-            <button type="button" class="btn btn-primary">Comprar entradas!</button>
+                      <h2 class="card-titulo">Antilopez</h2>
+                      <p class="card-texto">Mezcla de estilos incluidos el cavaret que conseguiran sorpender a los asistentes.</p>
+                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
-                  <a href="#">
+                  <a href="#" class="enlace">
                     <figure class= "thumbnail">
                       <img src="assets/images/music-band-in-the-studio-with-many-instruments.jpg" alt="Norwegian boller">
                     </figure>
                     <div class="card-content">
-                      <h2>Queen</h2>
-                      <p>Tributo a la mítica banda tocando todos sus grandes éxistos.</p>
-            <button type="button" class="btn btn-primary">Comprar entradas!</button>
+                      <h2 class="card-titulo">Queen</h2>
+                      <p class="card-texto">Tributo a la mítica banda tocando todos sus grandes éxistos.</p>
+                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
                     </div><!-- .card-content -->
                   </a>
                 </article><!-- .card -->
                 <article class="card">
-                  <a href="#">
+                  <a href="#" class="enlace">
                     <figure class="thumbnail">
                       <img src="assets/images/band-in-the-studio-with-many-instruments.jpg" alt="A dinosaur wearing an aluminium jacket">
                     </figure>
                     <div class="card-content">
-                      <h2>Andres Calamaro</h2>
-                      <p>Artista internacional que trae a nuestra tierra todos sus grandes éxitos.</p>
-            <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div><!-- .card-content -->
+                      <h2 class="card-titulo">Andres Calamaro</h2>
+                      <p class="card-texto">Artista internacional que trae a nuestra tierra todos sus grandes éxitos.</p>
+                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
+                    </div>
                   </a>
-                </article><!-- .card -->
-              </section><!-- .cards -->
-            </div><!-- .centered -->
+                </article>
+              </section>
+            </div>
           </main>
         </section>
       </div>
