primera version del blog. Falta parte baja con foto alrededor del texto y responsive

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
             <a href="bands.html">Bandas</a>
           </div>
           <div class="menu-superior-3">
-            <a href="#">Blog</a>
+            <a href="blog.html">Blog</a>
           </div>
           <div class="menu-superior-4">
-            <a href="#">Blog 2</a>
+            <a href="galeria.html">Galeria</a>
           </div>
         </section>
       </div>
