creado texto bajo de blog. Falta meter contenido e imagen de abajo y responsive

--- a/src/blog.html
+++ b/src/blog.html
@@ -54,6 +54,9 @@ Cras tincidunt hendrerit sapien, a consectetur arcu dapibus et. Mauris imperdiet
         </section>
        <section class="lista">
           <div class="div-centrado">
+            <div class="border border-secondary border-right-0 border-bottom-0  border-left-0 borde70"></div>
+          </div>
+          <div class="div-centrado">
             <div class="texto-justificado">
               <div class="list-group">
                 <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -84,6 +87,15 @@ Cras tincidunt hendrerit sapien, a consectetur arcu dapibus et. Mauris imperdiet
           </div>
         </section>
        <section class="foto-junto-texto">
+          <div class="div-centrado">
+            <div class="border border-secondary border-right-0 border-bottom-0  border-left-0 borde70"></div>
+          </div>
+          <div >
+ <img src="assets/images/logoFest.png" hspace="5" vspace="5" style="float: none;" />
+ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.
+ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.
+ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.
+ </div>
         </section>
       </div>
       <div class="item-3">
