enlaces menu inferior

--- a/src/blog.html
+++ b/src/blog.html
@@ -125,13 +125,13 @@ Cras tincidunt hendrerit sapien, a consectetur arcu dapibus et. Mauris imperdiet
             <a href="#">Home</a>
           </div>
           <div class="menu-inferior-3">
-            <a href="#">Bandas</a>
+            <a href="bands.html">Bandas</a>
           </div>
           <div class="menu-inferior-4">
-            <a href="#">Blog</a>
+            <a href="blog.html">Blog</a>
           </div>
           <div class="menu-inferior-5">
-            <a href="#">Blog 2</a>
+            <a href="galeria.html">Galería</a>
           </div>
           <div class="menu-inferior-6">
             <i class="fab fa-google-plus-g"></i>
