--- a/src/blog.html
+++ b/src/blog.html
@@ -28,15 +28,31 @@
       <div class="item-2-blog">
         <section class="carrusel">
           <div class="div-centrado">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="assets/images/people-in-festival.jpg" alt="First slide">
+                  <img class="d-block w-100" src="assets/images/people-in-festival.jpg" alt="Personas en festival">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="Second slide">
+                  <img class="d-block w-100" src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="Banda de rock en el escenario">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="assets/images/young-woman-enjoying-with-holi-color-in-the-crowd.jpg" alt="Fiesta con polvos de colores">
                 </div>
               </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
           </div>
         </section>
@@ -44,10 +60,10 @@
           <div class="div-centrado">
             <div class="texto-justificado">
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu tellus sed enim placerat mattis ac ut metus. Curabitur sit amet nisi sollicitudin, faucibus elit a, feugiat erat. Nulla consectetur nisl eu lacus tempor egestas. Vestibulum eget suscipit magna. Aliquam vel auctor nibh. Sed ac est a elit pulvinar fringilla vitae dapibus arcu. Nullam sapien lectus, molestie ac tellus id, fermentum egestas libero. Integer viverra, lorem et imperdiet luctus, orci justo malesuada felis, nec lacinia nulla nisl eu tellus. Curabitur ut volutpat enim, ac ullamcorper justo. Integer sed ornare neque. Nullam ultrices vestibulum metus ac scelerisque. Proin enim tortor, convallis ac ultrices eu, cursus vel risus. Nunc suscipit pellentesque tellus id rhoncus. Integer commodo velit in nibh consequat, sed aliquam augue blandit. Etiam sed condimentum dui.
+              Este año nace el festival de Chiclana. Un festival que nace con el proposito de traer a nuestra ciudad los mejores artistas del panorma nacional e internacional. Nuestro proposito es crear un ambiente donde todos podamos disfrutar de musica al aire libre y ser un punto de atracción turistica situando a Chiclana en el centro de mira todos
               </p>
               <p>
-Cras tincidunt hendrerit sapien, a consectetur arcu dapibus et. Mauris imperdiet in erat sed tempor. Ut ultrices augue condimentum quam tincidunt aliquam. Nulla convallis tristique euismod. Nulla accumsan volutpat vestibulum. Curabitur vel elit lacus. Sed consectetur lorem ligula, eu ultrices tortor commodo et. In hac habitasse platea dictumst. Nam quis erat at ante viverra congue. Quisque non pretium elit. Aenean tincidunt accumsan orci, id sagittis ante tempor et.
+                Ya tenemos algunos artistas con fechas concretas pero seguimos en negociaciones con otros más a falta de concretar fechas libres tanto en nuestro calendario como en su agenda. En cuanto se concreten esas fechas pondremos a disposición la venta de entradas de sus conciertos.
               </p>
           </div>
           </div>
@@ -62,25 +78,23 @@ Cras tincidunt hendrerit sapien, a consectetur arcu dapibus et. Mauris imperdiet
                 <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100">
                     <span class="badge badge-primary badge-pill">1  </span>
-                    <h5 class="mb-1">List group item heading</h5>
+                    <h5 class="mb-1">Elige tu concierto</h5>
                   </div>
-                  <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                  <p class="mb-1">Elige tu artista favorito que seguro encontarás en nuestro calendario de fechas</p>
                 </a>
                 <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100">
                     <span class="badge badge-primary badge-pill">2  </span>
-                    <h5 class="mb-1">List group item heading</h5>
+                    <h5 class="mb-1">Compra tu entrada</h5>
                   </div>
-                  <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  <small class="text-muted">Donec id elit non mi porta.</small>
+                  <p class="mb-1">No te lo pieneses y compra tu entrada porque disfrutaras de un espectaculo sin igual </p>
                 </a>
                 <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100">
                     <span class="badge badge-primary badge-pill">3  </span>
-                    <h5 class="mb-1">List group item heading</h5>
+                    <h5 class="mb-1">Disfruta del mejor verano</h5>
                   </div>
-                  <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  <small class="text-muted">Donec id elit non mi porta.</small>
+                  <p class="mb-1">Disfruta de un día inolvidable y si tu tiempo te lo permite quedate unos dias en Chiclana para conocerla a fondo.</p>
                 </a>
               </div>
             </div>
@@ -91,11 +105,27 @@ Cras tincidunt hendrerit sapien, a consectetur arcu dapibus et. Mauris imperdiet
             <div class="border border-secondary border-right-0 border-bottom-0  border-left-0 borde70"></div>
           </div>
           <div >
- <img src="assets/images/logoFest.png" hspace="5" vspace="5" style="float: none;" />
- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.
- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.
- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.
- </div>
+             <img src="assets/images/captura1.jpg" hspace="5" vspace="5"
+             class="imagen-flotante"  />
+
+             En un entorno espectacular como son las playas de Chiclana podremos disfrutar de los mejores conciertos y del mejor ambiente que podrás encontrar este verano en la provincia de Cádiz.
+             No solo podras disfrutar de nuestros eventos sino de todo lo que te ofrece tanto nuestra ciudad como el entorno en el que se cuentra.
+             Visita nuestro centro histórico de la ciudad, nuestros parques naturales y nuestras playas, que se encuentran entre las mejores del litoral español.
+             No pierdas la oportunidad de visitar tambien las bodegas del famoso vino de chiclana así como disfrutar de la gastronomía local.
+             Podras contratar diferentes excursiones y actividades que completarán tu visita a nuestra localidad. En nuestras instalaciones podrás encontras toda la información que necesites sobre donde se realizan, como se contratan y la gran oferta que cubren que van desde paracaidismo, vuelo a motor, rutas en kayack, alquiler de veleros, alquiler de motos acuaticas, rutas en caballo tanto en la playa como en la sierra y un largo etcetera para hacer  tus dias inolvidables.
+
+            </div>
+        </section>
+       <section class="segunda-foto">
+          <div class="div-centrado">
+            <div class="border border-secondary border-right-0 border-bottom-0  border-left-0 borde70"></div>
+          </div>
+          <div class="div-centrado">
+            <img class="d-block w-100" src="assets/images/musicians-on-stage-during-concert.jpg" alt="Fiesta con polvos de colores">
+          </div>
+          <div class="div-centrado">
+Las mejores guitarra y las mejores vibraciones las encontrarás este verano en Chiclana de la Frontera
+          </div>
         </section>
       </div>
       <div class="item-3">
