--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             <h1 class="poster-titulo">Festival de Chiclana</h1>
             <h2 class="poster-subtitulo">El mejor festival del sur</h2>
             <p class="texto">Tenemos el placer de anunciar que en Chiclana de la frontera se celebrará el mejor festival del sur de España. Acudirán los mejores artistas nacionales e internacionales para poner a Chiclana en el punto de mira de todos los festivales.</p>
-            <img src="assets/images/festival-azul-750.jpg" alt="Personas bailando en un festival">
+            <img class ="imagen-poster" src="assets/images/festival-azul-750.jpg" alt="Personas bailando en un festival">
             <div class="location">
               <p>Verano del 2021<br>Chiclana de la Frontera</p>
             </div>
