--- a/src/galeria.html
+++ b/src/galeria.html
@@ -33,67 +33,67 @@
                 <article class="card">
                   <a href="#" class="enlace">
                     <figure class="thumbnail">
-                      <img src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="A banana that looks like a bird">
+                      <img class="imagen-card" src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="Rozzalen">
                     </figure>
                     <div class="card-content">
                       <h2 class="card-titulo">Rozzalen</h2>
                       <p class="card-texto">Una de las mayores exponentes actuales en el mercado nacional</p>
                       <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div><!-- .card-content -->
+                    </div>
                   </a>
-                </article><!-- .card -->
+                </article>
                 <article class="card">
                   <a href="#" class="enlace">
                     <figure class="thumbnail">
-                      <img src="assets/images/the-drummer-plays-the-drums.jpg" alt="A banana that looks like a bird">
+                      <img class="imagen-card" src="assets/images/the-drummer-plays-the-drums.jpg" alt="El Kanka">
                     </figure>
                     <div class="card-content">
                       <h2 class="card-titulo">El Kanka</h2>
                       <p class="card-texto">Con su estilo fresco no te dejará indiferente.</p>
                       <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div><!-- .card-content -->
+                    </div>
                   </a>
-                </article><!-- .card -->
+                </article>
                 <article class="card">
                   <a href="#" class="enlace">
                     <figure class="thumbnail">
-                      <img src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="A banana that looks like a bird">
+                      <img class="imagen-card" src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="Izal">
                     </figure>
                     <div class="card-content">
                       <h2 class="card-titulo">Izal</h2>
                       <p class="card-texto">Rock actual que destaca por la voz de su cantante principal.</p>
                       <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div><!-- .card-content -->
+                    </div>
                   </a>
-                </article><!-- .card -->
+                </article>
                 <article class="card">
                   <a href="#" class="enlace">
                     <figure class="thumbnail">
-                      <img src="assets/images/people-in-festival-750.jpg" alt="A banana that looks like a bird">
+                      <img  class="imagen-card" src="assets/images/people-in-festival-750.jpg" alt="Antilopez">
                     </figure>
                     <div class="card-content">
                       <h2 class="card-titulo">Antilopez</h2>
                       <p class="card-texto">Mezcla de estilos incluidos el cavaret que conseguiran sorpender a los asistentes.</p>
                       <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div><!-- .card-content -->
+                    </div>
                   </a>
-                </article><!-- .card -->
+                </article>
                 <article class="card">
                   <a href="#" class="enlace">
                     <figure class= "thumbnail">
-                      <img src="assets/images/music-band-in-the-studio-with-many-instruments.jpg" alt="Norwegian boller">
+                      <img class="imagen-card" src="assets/images/music-band-in-the-studio-with-many-instruments.jpg" alt="Queen">
                     </figure>
                     <div class="card-content">
                       <h2 class="card-titulo">Queen</h2>
                       <p class="card-texto">Tributo a la mítica banda tocando todos sus grandes éxistos.</p>
                       <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div><!-- .card-content -->
+                    </div>
                   </a>
-                </article><!-- .card -->
+                </article>
                 <article class="card">
                   <a href="#" class="enlace">
                     <figure class="thumbnail">
-                      <img src="assets/images/band-in-the-studio-with-many-instruments.jpg" alt="A dinosaur wearing an aluminium jacket">
+                      <img class="imagen-card" src="assets/images/band-in-the-studio-with-many-instruments.jpg" alt="Andres Calamaro">
                     </figure>
                     <div class="card-content">
                       <h2 class="card-titulo">Andres Calamaro</h2>
