añadido imagenes de galeria. listo a falta de comprobar stylelint

--- a/src/galeria.html
+++ b/src/galeria.html
@@ -27,84 +27,44 @@
       </div>
       <div class="item-2-bandas">
         <section class="poster">
-          <main class="main-area">
-            <div class="centered">
-              <section class="cards">
-                <article class="card">
-                  <a href="#" class="enlace">
-                    <figure class="thumbnail">
-                      <img class="imagen-card" src="assets/images/the-musician-plays-an-acoustic-guitar.jpg" alt="Rozzalen">
-                    </figure>
-                    <div class="card-content">
-                      <h2 class="card-titulo">Rozzalen</h2>
-                      <p class="card-texto">Una de las mayores exponentes actuales en el mercado nacional</p>
-                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div>
-                  </a>
-                </article>
-                <article class="card">
-                  <a href="#" class="enlace">
-                    <figure class="thumbnail">
-                      <img class="imagen-card" src="assets/images/the-drummer-plays-the-drums.jpg" alt="El Kanka">
-                    </figure>
-                    <div class="card-content">
-                      <h2 class="card-titulo">El Kanka</h2>
-                      <p class="card-texto">Con su estilo fresco no te dejará indiferente.</p>
-                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div>
-                  </a>
-                </article>
-                <article class="card">
-                  <a href="#" class="enlace">
-                    <figure class="thumbnail">
-                      <img class="imagen-card" src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="Izal">
-                    </figure>
-                    <div class="card-content">
-                      <h2 class="card-titulo">Izal</h2>
-                      <p class="card-texto">Rock actual que destaca por la voz de su cantante principal.</p>
-                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div>
-                  </a>
-                </article>
-                <article class="card">
-                  <a href="#" class="enlace">
-                    <figure class="thumbnail">
-                      <img  class="imagen-card" src="assets/images/people-in-festival-750.jpg" alt="Antilopez">
-                    </figure>
-                    <div class="card-content">
-                      <h2 class="card-titulo">Antilopez</h2>
-                      <p class="card-texto">Mezcla de estilos incluidos el cavaret que conseguiran sorpender a los asistentes.</p>
-                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div>
-                  </a>
-                </article>
-                <article class="card">
-                  <a href="#" class="enlace">
-                    <figure class= "thumbnail">
-                      <img class="imagen-card" src="assets/images/music-band-in-the-studio-with-many-instruments.jpg" alt="Queen">
-                    </figure>
-                    <div class="card-content">
-                      <h2 class="card-titulo">Queen</h2>
-                      <p class="card-texto">Tributo a la mítica banda tocando todos sus grandes éxistos.</p>
-                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div>
-                  </a>
-                </article>
-                <article class="card">
-                  <a href="#" class="enlace">
-                    <figure class="thumbnail">
-                      <img class="imagen-card" src="assets/images/band-in-the-studio-with-many-instruments.jpg" alt="Andres Calamaro">
-                    </figure>
-                    <div class="card-content">
-                      <h2 class="card-titulo">Andres Calamaro</h2>
-                      <p class="card-texto">Artista internacional que trae a nuestra tierra todos sus grandes éxitos.</p>
-                      <button type="button" class="btn btn-primary">Comprar entradas!</button>
-                    </div>
-                  </a>
-                </article>
-              </section>
-            </div>
-          </main>
+          <div class="cards">
+              <div class="card">
+                  <div class="content">
+                    <img class="imagen-card" src="assets/images/people-in-concert.jpg" alt="Zona Disco">
+                  </div>
+                  <footer class="footer-centrado">Gente disfrutando en nuestra zona Disco</footer>
+              </div>
+              <div class="card">
+                  <div class="content">
+                    <img class="imagen-card" src="assets/images/laser-show-glowing-lines-neon-lights-with-black-background.jpg" alt="Fiestas con temática láser1">
+                  </div>
+                  <footer class="footer-centrado">Todos los jueves organizamos fiestas con temática láser</footer>
+              </div>
+              <div class="card">
+                  <div class="content">
+                    <img class="imagen-card" src="assets/images/friends-having-fun-in-park-with-holi-paints.jpg" alt="Fiesta Holi de inicio del verano">
+                  </div>
+                  <footer class="footer-centrado">Fiesta Holi de inicio del verano</footer>
+              </div>
+              <div class="card">
+                  <div class="content">
+                    <img class="imagen-card" src="assets/images/digital-mixer-recording-studio-with-computer-recording-music.jpg" alt="DJs Internacionales">
+                  </div>
+                  <footer class="footer-centrado">DJs Internacionales</footer>
+              </div>
+              <div class="card">
+                  <div class="content">
+                    <img class="imagen-card" src="assets/images/sunrise.jpg" alt="En un entorno inigualable">
+                  </div>
+                  <footer class="footer-centrado">En un entorno inigualable</footer>
+              </div>
+              <div class="card">
+                  <div class="content">
+                    <img class="imagen-card" src="assets/images/paragliding-at-sunset-with-amazing-cloudy-sky-and-sun-shining-through-clouds.jpg" alt="Actividades organizadas">
+                  </div>
+                  <footer class="footer-centrado">Actividades organizadas</footer>
+              </div>
+          </div>
         </section>
       </div>
       <div class="item-3">
