problemas con nombre foto

--- a/src/blog.html
+++ b/src/blog.html
@@ -105,7 +105,7 @@
             <div class="border border-secondary border-right-0 border-bottom-0  border-left-0 borde70"></div>
           </div>
           <div >
-             <img src="assets/images/Captura1.jpg" hspace="5" vspace="5"
+             <img src="assets/images/playaChiclana.jpg" hspace="5" vspace="5"
              class="imagen-flotante"  />
 
              En un entorno espectacular como son las playas de Chiclana podremos disfrutar de los mejores conciertos y del mejor ambiente que podrás encontrar este verano en la provincia de Cádiz.
