error menu inferior galerias

--- a/src/galeria.html
+++ b/src/galeria.html
@@ -100,7 +100,7 @@
             <a href="#">Blog</a>
           </div>
           <div class="menu-inferior-5">
-            <a href="#">Blog 2</a>
+            <a href="#">Galería</a>
           </div>
           <div class="menu-inferior-6">
             <i class="fab fa-google-plus-g"></i>
